force-app/main/default/objects/Account/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External Id</description>
    <displayFormat>Ac-{0000}</displayFormat>
    <inlineHelpText>External ID for REST integration</inlineHelpText>
    <label>ExternalID</label>
    <type>AutoNumber</type>
</CustomField>