force-app/main/default/objects/Account/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>